--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.15.1"
+  },
   "description": "",
   "main": "index.js",
   "type": "module",
+  
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
